# el-barrio-es-lo-primero-2

./: .gitignore
test/GLFW_BOX2D/environent/src/: CMakeLists.txt  main.cpp
test/GLFW_BOX2D/render2Dimage/img/: backgorund_1679x600.tga
test/GLFW_BOX2D/spriteWorld/img/: bubble.tga
test/GLFW_BOX2D/spriteWorld/src/: CMakeLists.txt  DebugDraw.cpp  main.cpp  main.hpp  utils.cpp  utils.hpp
test/JAVASCRIPT/conversionCartesianaApantalla/nbproject/: project.xml
test/JAVASCRIPT/conversionCartesianaApantalla/nbproject/private/: private.xml
test/OTHERS/GLFW_BOX2D/environent/src/: main.hpp
test/OTHERS/GLFW_BOX2D/render2Dimage/src/: CMakeLists.txt  main.cpp  main.hpp
test/OTHERS/GLFW_BOX2D/spriteWorld/src/: CMakeLists.txt  types.hpp  utils.cpp
test/OTHERS/JAVASCRIPT/conversionCartesianaApantalla/public_html/: index.html
test/OTHERS/RawImages/: PetaxCaminando_1.xcf  PetaxCaminando_4.xcf  PetaxCaminando_5.xcf  PetaxParadoTira.xcf  PetaxParado_2.xcf
test/OTHERS/SDL2_BOX2D/environent/conf/spriteSheets/: player.json
test/OTHERS/SDL2_BOX2D/sample001/src/: CMakeLists.txt
test/OTHERS/SDL2_BOX2D/spriteMotion/conf/: conf.json  level1_horizon.json
test/OTHERS/SDL2_BOX2D/spriteMotion/conf/spriteSheets/: enemy_1.json
test/OTHERS/SDL2_BOX2D/spriteMotion/src/: Camera.hpp  Entities.hpp  Fixture.hpp  Game.hpp  Glob.hpp  LTimer.cpp  Render.cpp  Text.cpp  Text.hpp
test/OTHERS/THREE_JS/sprite/nbproject/: project.properties  project.xml
test/OTHERS/THREE_JS/sprite/nbproject/private/: private.xml
test/OTHERS/THREE_JS/sprite/public_html/js/: index_backup_box2d.js
test/OTHERS/THREE_JS/sprite/public_html/js/contrib/: pixi-renderer.js
test/RawImages/: PetaxCabeza.xcf  PetaxCaminandoTira.xcf  PetaxCaminando_1.xcf  PetaxCaminando_2.xcf  PetaxCaminando_3.xcf  PetaxCaminando_4.xcf  PetaxParado_1.xcf  PetaxParado_2.xcf  PetaxParado_3.xcf  PetaxParado_4.xcf  SpriteSheet.json
test/SDL2_BOX2D/OTHERS/environent/src/: CMakeLists.txt  main.cpp
test/SDL2_BOX2D/OTHERS/sample001/src/: main.cpp
test/SDL2_BOX2D/OTHERS/spriteMotion/src/: CMakeLists.txt  Character.cpp  Clip.hpp  ErrorsCodes.hpp  FrameRate.hpp  Furnitures.cpp  Game.cpp  LTimer.hpp  Level.cpp  LevelsFactory.hpp  Names.hpp  Size.hpp  Sprite.hpp  Texture.cpp
test/SDL2_BOX2D/SDL2_BOX2D_SAMPLE/: SDL2Box2D.cpp
test/SDL2_BOX2D/spriteMotion/conf/spriteSheets/: furniture_1.json  player2.json  player3.json
test/SDL2_BOX2D/spriteMotion/doc/: HOWTO-Configurando el Proyecto para Xcode5.txt
test/SDL2_BOX2D/spriteMotion/src/: CMakeLists.txt  Camera.cpp  Camera.hpp  Character.cpp  Character.hpp  Clip.hpp  CollisionListener.cpp  CollisionListener.hpp  Colors.hpp  Constants.hpp  Controller.cpp  Controller.hpp  Conv.hpp  DebugInfo.cpp  DebugInfo.hpp  Entities.hpp  ErrorsCodes.hpp  Fixture.hpp  Flags.hpp  FrameRate.hpp  Furnitures.cpp  Furnitures.hpp  Game.cpp  Game.hpp  Glob.hpp  Level.cpp  Level.hpp  Level_1.cpp  Level_1.hpp  Measures.hpp  Names.hpp  Object.hpp  Physics.cpp  Physics.hpp  Render.cpp  Render.hpp  Size.hpp  Sprite.cpp  Sprite.hpp  Texture.cpp  (+4 more)
test/THREE_JS/sprite/public_html/: index.html
test/THREE_JS/sprite/public_html/css/: index.css
test/THREE_JS/sprite/public_html/js/: index.js  index_pixi_physicsJS.js
test/conversionCartesianaApantalla/nbproject/: project.properties
test/conversionCartesianaApantalla/public_html/js/: index.js
test/ejerJS002/nbproject/: project.properties  project.xml
test/ejerJS002/nbproject/private/: private.xml
test/ejerJS002/public_html/: index.html
test/ejerJS002/public_html/js/: index.js
test/ejerJS002/public_html/js/assets/: level1.json  level2.json  level3.json  level_1.json  nivel_1.json
test/ejerJS003/nbproject/: project.properties  project.xml
test/ejerJS003/public_html/: index.html
test/ejerJS003/public_html/js/: index.js
test/ejerJS004/nbproject/: project.properties  project.xml
test/ejerJS004/public_html/: index.html
test/ejerJS004/public_html/js/: index.js
test/ejerJS004/public_html/js/assets/: poligono.json
test/environent/bash/: syncResourcesOSX.sh
test/environent/conf/: conf.json
test/environent/doc/: HOWTO-Configurando el Proyecto para Xcode5.txt
test/environent/src/: CMakeLists.txt  main.cpp  main.hpp
test/proto001/nbproject/: project.properties  project.xml
test/proto001/nbproject/private/: private.xml
test/proto001/public_html/: index.html
test/proto001/public_html/css/: index.css
test/proto001/public_html/js/: index.js
test/proto001/public_html/js/assets/: petaxMovements.json
test/spriteMotion/conf/spriteSheets/: player.json
test/spriteMotion/src/: Animation.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Character.cpp  Character.hpp  Colors.hpp  Constants.hpp  Game.cpp  Game.hpp  Physics.cpp  Physics.hpp  Sprite.cpp  Sprite.hpp  Texture.cpp  Texture.hpp  errorsCodes.hpp  main.cpp
